--- a/2048 demo/2048.css
+++ b/2048 demo/2048.css
@@ -197,40 +197,24 @@ header{
     color: #fff7eb;
     background: #eec22e;
 }
-.merge{
-    animation:merge 0.5s linear;
-}
-@keyframes merge {
-    25%{
-        transform: scale(0.9);
-    }
-    50%{
-        transform: scale(1);
-    }
-    75%{
-        transform: scale(1.1);
-    }
-    100%{
-        transform: scale(1);
-    }
+/*.merge{*/
+    /*animation:merge 0.2s linear;*/
+/*}*/
+/*@keyframes merge {*/
+    /*25%{*/
+        /*transform: scale(0.9);*/
+    /*}*/
+    /*50%{*/
+        /*transform: scale(1);*/
+    /*}*/
+    /*75%{*/
+        /*transform: scale(1.1);*/
+    /*}*/
+    /*100%{*/
+        /*transform: scale(1);*/
+    /*}*/
 
-}
-@keyframes  merge4{
-    25%{
-        transform: scale(0.9);
-    }
-    50%{
-        transform: scale(1);
-    }
-    75%{
-        transform: scale(1.1);
-    }
-    100%{
-        transform: scale(1);
-    }
-
-}
-
+/*}*/
 @media only screen and (min-width: 500px) {
     #restart{
         width: 45%;
