--- a/TextChanger/css.css
+++ b/TextChanger/css.css
@@ -33,15 +33,46 @@ header h1{
     border-color: #78C3F3;
     color: #004974;
 }
-.annotationContainer{
+#annotationBox{
     width: 60%;
+}
+.annotationContainer{
     margin-top: 20px;
+    margin-bottom: 20px;
     padding-left: 40px;
     padding-right: 40px;
+    border: solid 1px black;
+    border-radius: 5px;
+    background-color:antiquewhite;
 }
 #titleListContainer{
     float: right;
+    position: relative;
     width: 30%;
     padding: 4px 12px;
+}
+
+#titleListContainer li{
+    float: left;
+    clear: both;
+    list-style-position: inside;
+    margin-top: 8px;
+    background-color: white;
+    color: black;
+    border: solid 1px black;
+    border-radius: 3px;
+    cursor: pointer;
+    font-weight:900;
+    padding: 2px 0;
+}
+#titleListContainer li:hover{
+    background-color: black;
+    color: white;
+    border: 1px solid white;
+}
+
+#titleListContainer li:active{
+    position: relative;
+    top: 2px;
 }
 
