--- a/TextChanger/css.css
+++ b/TextChanger/css.css
@@ -39,11 +39,11 @@ header h1{
 .annotationContainer{
     margin-top: 20px;
     margin-bottom: 20px;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding: 10px 40px;
     border: solid 1px black;
     border-radius: 5px;
     background-color:antiquewhite;
+    line-height: 1.5em;
 }
 #titleListContainer{
     float: right;
