--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -129,3 +129,7 @@
     @apply outline-2 outline-offset-1 outline-skin-fill focus-visible:no-underline focus-visible:outline-dashed;
   }
 }
+
+a {
+  word-break: break-all;
+}
